# learn-rust

./: .gitignore  README.md
configurations/: Cargo.toml
hello-actix/: Cargo.toml  config.yaml
hello-actix/src/: api.rs  config.rs  controllers.rs  main.rs  mongo.rs  rabbitmq.rs
hello-actix/src/utils/: mod.rs  redirect.rs
hello-rust/: Cargo.toml
hello-rust/src/: ids.rs  main.rs  utils.rs
hello-tokio/: Cargo.toml
hello-tokio/examples/: hello-tokio.rs
hello-tokio/src/: main.rs
multimodule/: Cargo.toml
multimodule/app/: Cargo.toml
multimodule/app/src/: main.rs
rabbitmq-test/: Cargo.toml
rabbitmq-test/src/: main.rs
