[package]
name = "hello-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web   = "4"
serde       = { version = "1.0", features = ["derive"] }
config      = "0.14.0"
actix-cors = "0.7.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
mongodb = { version = "2.8.2", features = ["async-std-runtime"] }
